--- a/view/pages/completed.html
+++ b/view/pages/completed.html
@@ -1,5 +1,6 @@
 <p id=message>I cannot believe it! You finished all levels of this game! You are awesome!
 <h2>Your time record</h2>
+<p>You finished all levels in <strong>{total_time}</strong>. You could be <strong>#{rank}</strong> of the most wanted. Here is the detail:
 <table id=record>
 <thead>
 <tr id=record-header><th class=level-name>Level name<th class=level-time>Time spent
