--- a/view/pages/main.html
+++ b/view/pages/main.html
@@ -3,9 +3,18 @@
 <p id=message>HackGame3 is a timed hacker game. When you are ready, just click "{start_button_text}".
 <p><input type=submit name=start id=start-button class=button value={start_button_text}>
 </form>
+<table id=ranking>
+<caption>The most wanted v3.1</caption>
+<colgroup>
+<col class=rank>
+<col class=name>
+<col class=time>
+</colgroup>
+{ranking}
+</table>
 <h2>What is this?</h2>
 <p>HackGame3 is a free, safe, legal, browser-based and timed game for hackers to test and expand their exploration skills.
-<p>In this game, you need to bypass several login pages, intended to test your knowledge about direct page request, parameter modification, default credentials, javascript, reverse engineering, error message/status leaks and timing attack.
+<p>In this game, you need to bypass several login pages, intended to test your knowledge about direct page request, parameter modification, default credentials, javascript, reverse engineering, error message/status leaks, timing attack, cookies and header modifications.
 <h2>About privacy</h2>
-<p>To play this game, you need to enable your cookie and javascript. The cookie is only for tracking your progress within the game.
+<p>To play this game, you need to enable your cookies and javascript.
 <p>I am not going to store your <abbr title="Internet Protocol">IP</abbr> address or your web browser data, neither your personal information.
