--- a/view/template.html
+++ b/view/template.html
@@ -6,8 +6,16 @@
 <link rel=stylesheet href={base_uri}assets/master.css>
 {opengraph}
 <body id=top>
-<p id=site-title><a href={base_uri} id=site-name title="Return to home">HackGame3</a><span class=hidden>, </span><span id=site-attribution>by <a href=http://chaurocks.com/ id=logotype title="Return to ChauRocks"><svg width=21 height=21 id=logo viewBox="0 0 21 21"><path id=logo-path d="m2.4 1v14c0 2 2 2 2 2h2v-14c0-2-2-2-2-2zm5 8v6c0 2 2 2 2 2h2v-6c0-2-2-2-2-2zm5 0v6c0 2 2 2 2 2h2v-6c0-2-2-2-2-2zm5-4v12h2c2 0 2-2 2-2v-8c0-2-2-2-2-2zm4 13h-19v2z" fill=#222 transform=rotate(6) /></svg> <span class=lastname>Chau</span>Rocks</a></span>
+<p id=site-title><a href={base_uri} id=site-name title="Return to home">HackGame3</a> <small id=version>v3.1</small><span class=hidden>, </span><span id=site-attribution>by <a href=http://chaurocks.com/ id=logotype title="Return to ChauRocks"><svg width=21 height=21 id=logo viewBox="0 0 21 21"><path id=logo-path d="m2.4 1v14c0 2 2 2 2 2h2v-14c0-2-2-2-2-2zm5 8v6c0 2 2 2 2 2h2v-6c0-2-2-2-2-2zm5 0v6c0 2 2 2 2 2h2v-6c0-2-2-2-2-2zm5-4v12h2c2 0 2-2 2-2v-8c0-2-2-2-2-2zm4 13h-19v2z" fill=#222 transform=rotate(6) /></svg> <span class=lastname>Chau</span>Rocks</a></span>
+<aside id=sidebar>
 {completeness_meter}
+<section id=levels-list-section>
+<h2 id=levels-title>Levels</h2>
+<ul id=levels-list>
+{level_list}
+</ul>
+</section>
+</aside>
 <main id=main>
 <h1 id=page-title>{title}</h1>
 <div class=content-body>
